adjusting index about ss index landing css for overflow scroll bar issue, fixing landing image height and margin @ about us due to landing image VH

--- a/public/css/_index-about.scss
+++ b/public/css/_index-about.scss
@@ -1,6 +1,7 @@
 .home-aboutus{
     width:100%;
     text-align: center;
+    margin-top:10vh;
 }
 .aboutus-wrapper{
     width:90%;
@@ -9,6 +10,7 @@
     margin-bottom:10%;
     float: left;
     margin-left:5%;
+    overflow: hidden;
 }
 .panel{
     text-align: center;
