--- a/public/css/_index-landing.scss
+++ b/public/css/_index-landing.scss
@@ -31,11 +31,9 @@
     background-size:cover;
     background-position:center;
     position:relative;
-    height:90vh;
+    height:110vh;
     background-color:$primary-color;
     z-index:1;   
-    overflow: hidden;
-//second scroll bar issue
 }
 .landing-image{
     @extend %backgroundImg;
@@ -48,7 +46,7 @@
     top:0;
     z-index: -1;
     display: table;
-    width: 110vw;
+    width: 100vw;
     height:110vh;
 }
 @keyframes indexLandingTransition {
