--- a/public/css/_nav.scss
+++ b/public/css/_nav.scss
@@ -29,6 +29,7 @@
     line-height: 40px;
     overflow: hidden;
     clear:both;
+    overflow: hidden;
 }
 .navbar img{
     margin-left:10%;
